Added identity and JWT authentication to the API.

--- a/BookStore-API/appsettings.json
+++ b/BookStore-API/appsettings.json
@@ -9,5 +9,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "560ef190-480d-4c0e-b029-fc8238032848",
+    "Issuer": "test.com"
+  }
+
+
 }
